# gnucashMigrate

./: Cargo.toml  out.txt  test.xml
resource/: split.xml  transaction.xml
src/: common.rs  main.rs  read.rs  utils.rs  write.rs  xml_create.rs
src/mapper/: account.rs  mod.rs  wrappers.rs  xml_bindings.rs
